--- a/src/components/Badge/Badge.css
+++ b/src/components/Badge/Badge.css
@@ -1,4 +1,10 @@
-.avatar {
+.badge {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+}
+
+.badge .avatar {
   width: 50px;
   height: 50px;
   border-radius: 25px;
@@ -8,7 +14,7 @@
   box-shadow: 0 3px 6px rgba(0,0,0,.1);
 }
 
-.avatar .image {
+.badge .avatar .image {
   width: 100%;
   height: 100%;
 }
